--- a/packages/lexical-playground/index.html
+++ b/packages/lexical-playground/index.html
@@ -14,6 +14,9 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <div id="portal"></div>
+    <script>
+      const global = globalThis;
+    </script>
     <script type="module" src="/src/index.tsx"></script>
   </body>
 </html>
